                        - `NativeInputConfiguration#maxTextLength` is not nullable anymore. "-1" should be used for unset.
                        - `TextInputWrapper#setText/setPosition` have been removed and replaced with `writeResults`
                        - `TextInputWrapper#shouldClose` has been removed and should now be handled over the close callback
- API Addition: `Input#KeyboardHeightObserver` was extended by `onKeyboardShow` and `onKeyboardHide`. See javadocs for more info.
- API Addition: `Input#isTextInputFieldOpened` has been added, to check, whether an InputField opened by `openTextInputField` is open
- Android: The KeyboardHeightObserver will not report duplicate events anymore
- Android: The KeyboardHeightObserver will now only consider `systemBars`, `ime`, `displayCutout`, `mandatorySystemGestures` for insets.
- Android: Added missing soundId based API implementations to AsynchronousSound.

[1.14.0]
- [BREAKING CHANGE] API: Pools changes in 1.13.5 have been partially reverted. Pools#get/Pools#obtain method return to requiring a Class parameter. Reflection is avoided by using pre-populated Pools for libgdx classes. See https://github.com/libgdx/libgdx/pull/7648 and https://github.com/libgdx/libgdx/pull/7678
- [BREAKING CHANGE] `JsonSkimmer` API changed to use JsonToken parameters.
- [BREAKING CHANGE] `JsonValue#last` added for O(1) append. Code that changes next may also need to change last.
- [BREAKING CHANGE] `JsonValue#get` is no longer case insensitive. Use `JsonValue#getIgnoreCase()`.
- [BREAKING CHANGE] `StringBuilder` has been deleted; its methods have been merged with `CharArray`.
- API Addition: Added `JsonValue#toJson` that takes a Writer.
- API Addition: Added `getProgrammaticChangeEvents()` to scene2d.ui actors that have `setProgrammaticChangeEvents()`.
- API Addition: Added `JsonMatcher`, extracts values with pattern matching.
- API Addition: Added `setUniform_iv` functions in `ShaderProgram` to set uniform integer arrays