@@ -178,7 +178,7 @@ public class UITest extends GdxTest {
 
 		textfield.setTextFieldListener(new TextFieldListener() {
 			public void keyTyped (TextField textField, char key) {
-				if (key == '\n') textField.getOnscreenKeyboard().show(false);
+				if (key == '\n') textField.getOnscreenKeyboard().close();
 			}
 		});
 
